# assignment-5-AMHejazi-1

./: CMakeLists.txt
shaders/: fragment.fs
src/: CS247_prog.cpp  CS247_prog.h
